# Correlation

./: .SRCINFO  .clang-format  .clang-tidy  .clangd  .gitignore  .tags  AUTHORS  AnalysisRunner_8cpp.html  AnalysisRunner_8cpp__incl.map  AnalysisRunner_8cpp__incl.md5  AnalysisRunner_8hpp.html  AnalysisRunner_8hpp__dep__incl.map  AnalysisRunner_8hpp__dep__incl.md5  AnalysisRunner_8hpp__incl.map  AnalysisRunner_8hpp__incl.md5  AnalysisRunner_8hpp_source.html  AnalysisTypes_8hpp.html  AnalysisTypes_8hpp__dep__incl.map  AnalysisTypes_8hpp__dep__incl.md5  AnalysisTypes_8hpp__incl.map  AnalysisTypes_8hpp__incl.md5  AnalysisTypes_8hpp_source.html  AngleCalculator_8cpp.html  AngleCalculator_8cpp__incl.map  AngleCalculator_8cpp__incl.md5  AngleCalculator_8hpp.html  AngleCalculator_8hpp__dep__incl.map  AngleCalculator_8hpp__dep__incl.md5  AngleCalculator_8hpp__incl.map  AngleCalculator_8hpp__incl.md5  AngleCalculator_8hpp_source.html  AppBackend_8cpp.html  AppBackend_8cpp__incl.map  AppBackend_8cpp__incl.md5  AppBackend_8hpp.html  AppBackend_8hpp__dep__incl.map  AppBackend_8hpp__dep__incl.md5  AppBackend_8hpp__incl.map  AppBackend_8hpp__incl.md5  AppBackend_8hpp_source.html  (+3719 more)
src/: AppBackend.cpp  AppController.cpp  Atom.cpp  Atom.h  Atom.hpp  CMakeLists.txt  Cell.cpp  Cell.h  Cell.hpp  Constants.cpp  Constants.h  Constants.hpp  DistributionFunctions.cpp  DynamicsAnalyzer.cpp  FileIO.cpp  FileReader.cpp  FileWriter.cpp  LinearAlgebra.cpp  Makefile  Makefile.am  Makefile.in  NeighborGraph.cpp  NeighborList.cpp  ProgramOptions.cpp  ReadFiles.cpp  ReadFiles.h  ReadFiles.hpp  Smoothing.cpp  Smoothing.h  Smoothing.hpp  StructureAnalyzer.cpp  StructureFactor.cpp  StructureFactor.hpp  Templates.hpp  Templates.tpp  Trajectory.cpp  TrajectoryAnalyzer.cpp  WriteFiles.cpp  WriteFiles.hpp  main.cpp
src/.deps/: __BIN_DIR__correlation-Atom.Po  __BIN_DIR__correlation-Cell.Po  __BIN_DIR__correlation-Constants.Po  __BIN_DIR__correlation-ReadFiles.Po  __BIN_DIR__correlation-Smoothing.Po  __BIN_DIR__correlation-main.Po
src/analysis/: DistributionFunctions.cpp  DynamicsAnalyzer.cpp  StructureAnalyzer.cpp  TrajectoryAnalyzer.cpp
src/app/: AnalysisRunner.cpp  AppBackend.cpp  AppController.cpp  FileIOHandler.cpp  InputValidator.cpp  PlotController.cpp  PresetController.cpp  PresetManager.cpp
src/bindings/: CMakeLists.txt  analysis_bindings.cpp  analysis_bindings.hpp  calculator_bindings.cpp  calculator_bindings.hpp  core_bindings.cpp  core_bindings.hpp  io_bindings.cpp  io_bindings.hpp  math_bindings.cpp  math_bindings.hpp  module.cpp  wasm_bindings.cpp  writer_bindings.cpp  writer_bindings.hpp
src/calculators/: AngleCalculator.cpp  CNACalculator.cpp  CNCalculator.cpp  CalculatorFactory.cpp  ChiralityCalculator.cpp  ClusterCalculator.cpp  DADCalculator.cpp  DebyeS_KCalculator.cpp  DihedralCalculator.cpp  DistanceCalculator.cpp  GPUDistanceCalculator.cu  GPUSQCalculator.cu  GPUSteinhardtCalculator.cu  HBondCalculator.cpp  HyperuniformityCalculator.cpp  LocalEntropyCalculator.cpp  MDCalculator.cpp  MLIPCalculator.cpp  MSDCalculator.cpp  MotifFinder.cpp  PADCalculator.cpp  RDCalculator.cpp  RDFCalculator.cpp  SDFCalculator.cpp  SQCalculator.cpp  SteinhardtCalculator.cpp  StructureFactorCalculator.cpp  VACFCalculator.cpp  VDOSCalculator.cpp  VoronoiCalculator.cpp  XRDCalculator.cpp
src/cli/: CliParser.cpp  main_cli.cpp
src/core/: Cell.cpp  NeighborGraph.cpp  Trajectory.cpp
src/plotters/: PathFont.cpp  RobotoData_ASCII_1.cpp  RobotoData_ASCII_2.cpp  RobotoData_Extended.cpp  pdfgen.c
src/readers/: ArcReader.cpp  CMakeLists.txt  CP2KReader.cpp  CarReader.cpp  CastepMdReader.cpp  CellReader.cpp  CifReader.cpp  FileReader.cpp  GromacsReader.cpp  LammpsDumpReader.cpp  OnetepDatReader.cpp  OutmolReader.cpp  PdbReader.cpp  QEReader.cpp  ReaderFactory.cpp  VaspReader.cpp  XYZReader.cpp  XdatcarReader.cpp
src/writers/: ArrowWriter.cpp  CSVWriter.cpp  FileWriter.cpp  HDF5Writer.cpp  WriterFactory.cpp
test/: CMakeLists.txt
test/test_1/: G_.csv  J.csv  Nc.csv  PAD.csv  S_q.csv  Z.csv  g.csv  g_smotthed.csv  xSi.car
test/test_2/: G_.csv  J.csv  Nc.csv  PAD.csv  S_q.csv  Si.car  Z.csv  g.csv
test/test_3/: G_.csv  J.csv  Nc.csv  PAD.csv  S_q.csv  Z.csv  aPd.cell  aPdH.car  g.csv  g_smoothed.csv
test/test_4/: G_.csv  J.csv  Nc.csv  PAD.csv  S_q.csv  Z.csv  aPdH.car  g.csv  g_smoothed.csv  graphite.car
test/test_5/: G_.csv  J.csv  Nc.csv  PAD.csv  S_q.csv  Z.csv  g.csv  g_smoothed.csv  lBi.car
test/test_6/: G_.csv  J.csv  Nc.csv  PAD.csv  S_q.csv  Z.csv  aPdH_25152.car  aPdH_3144.car  g.csv
test/test_7/: aPdD-stress.car
tests/: AngleTests.cpp  Angle_Reproduction_tests.cpp  Atom_test.cpp  CMakeLists.txt  Cell_test.cpp  Distribution_Functions_tests.cpp  DynamicsAnalyzer_test.cpp  FileIO_test.cpp  FileWriter_test.cpp  NeighborList_test.cpp  PAD_tests.cpp  PrecisionTestHelper.hpp  ReadFiles_test.cpp  StructureAnalyzer_test.cpp  Test01_Atom.cpp  Test02_Cell.cpp  Test03_Trajectory.cpp  Test04_StructureAnalyzer.cpp  Test05_TrajectoryAnalyzer.cpp  Test06_DistributionFunctions.cpp  Test06_RDF.cpp  Test07_SQ.cpp  Test08_XRD.cpp  Test09_PAD.cpp  Test10_VACF.cpp  Test11_DynamicsAnalyzer.cpp  Test12_FileIO.cpp  Test12_FileReader.cpp  Test13_FileWriter.cpp  Test14_vDoS.cpp  Test15_AppBackend.cpp  Test16_AppController.cpp  Test17_DihedralCalculator.cpp  Test18_MotifFinder.cpp  TrajectoryAnalyzer_test.cpp  TrajectoryRevision_test.cpp  _01_Atom_Tests.cpp  _02_Cell_Tests.cpp  _03_Trajectory_Tests.cpp  _04_FileReader_Tests.cpp  (+38 more)
tests/benchmarks/: CNACalculatorBenchmark.cpp  ClusterCalculatorBenchmark.cpp  DistanceCalculatorBenchmark.cpp  RDFCalculatorBenchmark.cpp  SDFCalculatorBenchmark.cpp  SteinhardtCalculatorBenchmark.cpp  StructureAnalyzerBenchmark.cpp
tests/data/: SiO_multi.poscar  Si_seldyn.poscar
tests/data/arc/: clean.arc  (+2 more)
tests/fuzz/: CMakeLists.txt  fuzz_arc.cpp  fuzz_car.cpp  fuzz_castep_md.cpp  fuzz_cell.cpp  fuzz_cif.cpp  fuzz_cp2k.cpp  fuzz_gromacs.cpp  fuzz_lammps_dump.cpp  fuzz_onetep_dat.cpp  fuzz_outmol.cpp  fuzz_pdb.cpp  fuzz_qe.cpp  fuzz_utils.hpp  fuzz_vasp.cpp  fuzz_xdatcar.cpp  fuzz_xyz.cpp
(+692 files in other folders)
