# init autoconf
AC_INIT([correlation], [1.0], [isurwars@gmail.com])

# init automake
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Minimum Autoconf version required.
AC_PREREQ(2.60)

# srcdir location.
AC_CONFIG_SRCDIR([src/main.cpp])

# We need a CPP compiler.
AC_PROG_CXX

AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT
